# CIATA-Play-Toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIRST_COMMIT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  playtool.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
backup-v1.5-20260723-084102/: googleplay.py  tutorial.py
backup-v1.6-20260723-090025/: googleplay.py  tutorial.py
backup-v1.6.1-20260723-100429/: googleplay.py  tutorial.py
doc/: ACCESSIBILITY.md  ACCESSIBILITY_PRINCIPLES.md  ARCHITECTURE.md  CLI_ACCESSIBILITY_STANDARD.md  DOCTOR_ENGINE.md  KNOWLEDGE_BASE.md  PLUGIN_API.md  PUBLISHING_CONTEXT.md  README.md  REPORTING.md  TUTORIAL_ENGINE.md  TUTORIAL_SPEC.md  UX_GUIDE.md  WIZARD_ENGINE.md
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  TUTORIAL_SPEC.md
examples/: playtool.yaml
legacy/: gerenciar_assets_play.py
playtool/: assets.py  cli.py  context.py  core.py  doctor.py  googleplay.py  listing.py  manifest.py  progress.py  release.py  tutorial.py
tests/: test_assets.py  test_context.py  test_doctor.py  test_listing.py  test_listing_text.py  test_manifest.py  test_tutorial.py
